[tool:pytest]
python_files=test*.py
addopts=--tb=native -p no:doctest --timeout=30 --timeout-method=thread --session-timeout=1200
norecursedirs=bin dist docs	htmlcov script hooks node_modules .* {args}

[flake8]
ignore = F999,E501,E128,E124,E402,W503,E731,F841,F405
max-line-length = 100
exclude = .tox,.git,*/migrations/*,lemur/static/*,docs/*

[wheel]
universal = 1

[metadata]
description_file = README.rst
